# YADRO-Test-assignment

./: .gitmodules  CMakeLists.txt  Club.h  README.md  club_management.cpp  core_functions.cpp  core_functions.h  functions.cpp  functions.h  helper_functions.cpp  helper_functions.h  main.cpp  structures.h
all_tests/input_tests/: CMakeLists.txt  input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input17.txt  input18.txt  input19.txt  input2.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input9.txt
testing_club_work/: CMakeLists.txt  test_club.cpp
